# simple-web-game

./: .gitignore  docker-compose.yml  example.env  mypy.ini  pyproject.toml
.github/workflows/: formatting.yml  lint.yml  python.yml  tests.yml
database/: __init__.py  database.py
database/migrator/: __init__.py  __main__.py  constants.py  migration.py  migrator.py  utils.py
database/migrator/templates/: initial_migration.template  new_migration.template
factories/: __init__.py  migration.py  migration.template
tests/: __init__.py  conftest.py  constants.py
tests/database/: __init__.py  test_database.py  test_migrator.py
